test/corpus/reference_node.txt
==================
reference node
==================

~amp: ~gate >> envperc 0.001 0.1;

---

(document
	(line
		(reference)
		(chain 
			(node
				(reference_pointer)
			)
			(node
				(node_name)
				(number)
				(number)
			)
		)
	)
)
				
				
